# Undiscord-CLI

./: .gitattributes  .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml  userscript.js
tests/: test_deleter.py
undiscord/: __init__.py  __main__.py  cli.py  deleter.py
